# slack-chatbot-llm

./: .gitignore  README.md  pyproject.toml
examples/: sample.py  work.py
slack/: app.py  functions.py
